--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
-    "locomotive-scroll": "^4.1.4",
+    "locomotive-scroll": "^5.0.0-beta.11",
     "lottie-react": "^2.4.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-locomotive-scroll": "^0.2.2",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
